--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="download_details_not_found">There is no module with package name \"%s\" in the repository.</string>
     <string name="download_no_versions">The author hasn\'t uploaded anything yet.</string>
     <string name="download_test_version_not_shown">A test version is available, however it isn\'t shown due to your global or module-specific settings.</string>
+    <string name="download_disabled">Downloading modules is disabled.</string>
 
     <!-- Settings tab -->
     <string name="settings_group_installation">Installation</string>
