--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="uninstall_reverted">app_process was uninstalled previously but version \"%s\" was found now. If you didn\'t expect an old file to be restored, you might want to try uninstalling via recovery (auto or manual).</string>
     <string name="tap_to_dismiss">Tap to dismiss</string>
     <string name="sdcard_location">SD card: %s</string>
+    <string name="installation_lollipop">Installation is only possible manually via recovery for now.</string>
 
     <!-- File operations -->
     <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
