--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -18,6 +18,8 @@
     <string name="welcome_update_available">一个或多个模块有更新可用。</string>
     <string name="tabSettings">设置</string>
     <string name="tabSettingsDescription">此处可配置 Xposed 安装器和框架。</string>
+    <string name="tabSupport">支持</string>
+    <string name="tabSupportDescription">查找 Xposed 相关问题的帮助。您也可以捐赠以表达对 Xposed 的感谢。</string>
     <string name="tabLogs">日志</string>
     <string name="tabLogsDescription">显示并保存/发送 Xposed 框架产生的日志。</string>
     <string name="tabAbout">关于</string>
@@ -36,18 +38,19 @@
     <string name="phone_not_compatible">Xposed 目前不兼容 Android SDK 版本 %1$d 或者您的处理器架构 (%2$s)。</string>
     <string name="not_tested_but_compatible">Xposed 未在 Android SDK 版本 %d 上测试，但它似乎是可兼容的。如果您热爱冒险，您可以试试安装它。</string>
     <string name="reboot_failed">重启失败。请使用设备的标准重启功能。</string>
-    <string name="auto_flash_note">当你按下 OK 后，%s 将会被自动刷入设备。</string>
+    <string name="auto_flash_note">当您按下确定后，%s 将会被自动刷入设备。</string>
     <string name="manual_flash_note">请将 %s 从 SD 卡刷入设备以完成操作。</string>
     <string name="reboot_confirmation">您现在要重启吗？</string>
     <string name="reboot_recovery_confirmation">您现在要重启进入 Recovery 模式吗？</string>
     <string name="install_warning_title">小心！</string>
     <string name="install_warning">某些情况下，您的设备将在安装 Xposed 之后无法启动。\n\n如果您之前没有听说过“软变砖”或“无限重启”，或者您不知道如何从这种情况恢复，请<b>不要</b>安装 Xposed！\n\n无论如何，强烈建议准备好最近的备份。</string>
-    <string name="dont_show_again">不要再显示这个</string>
+    <string name="dont_show_again">不要再次显示</string>
     <string name="install_known_issue">Xposed 与您的 ROM 似乎存在已知的问题 (\"%s\")。安装 Xposed 可能无法正常工作，或是引发一系列问题。点击这里获知详情。</string>
     <string name="install_reverted">之前已经安装版本为 \"%1$s\" 的 app_process，但是现在找到的版本却是 \"%2$s\"。如果您不希望一个旧文件被还原，也许您应该试试通过 Recovery 安装（自动或手动）。</string>
     <string name="uninstall_reverted">app_process 之前已被卸载，现在却找到了版本为 \"%s\" 的。如果您不希望一个旧文件被还原，也许您应该试试通过 Recovery 卸载（自动或手动）。</string>
     <string name="tap_to_dismiss">轻按以消除</string>
     <string name="sdcard_location">SD 卡: %s</string>
+    <string name="installation_lollipop">目前只能通过 Recovery 手动安装。</string>
 
     <!-- File operations -->
     <string name="root_failed">无法获取 root 权限。\n\n请确认您的设备已经正确的 root 以及您没有屏蔽 shell 命令。</string>
@@ -71,7 +74,7 @@
     <string name="file_create_directory_failed">无法创建目录 %s</string>
     <string name="file_writing_recovery_command">正在写入 Recovery 命令&#8230;</string>
     <string name="file_writing_recovery_command_failed">写入 Recovery 命令失败。请换一种安装方式。</string>
-    <string name="file_done">完成！修改将于重启之后生效。</string>
+    <string name="file_done">完成！变更将于重启后生效。</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed 模块未激活</string>
@@ -81,16 +84,16 @@
     <string name="module_empty_description">(未提供描述)</string>
     <string name="module_no_ui">该模块未提供用户界面</string>
     <string name="no_xposed_modules_found">未找到 Xposed 模块！</string>
-    <string name="xposed_module_list_updated">Xposed 模块列表已更新\n重启后更改将生效</string>
+    <string name="xposed_module_list_updated">Xposed 模块列表已更新\n变更将于重启后生效</string>
     <string name="xposed_module_updated_notification_title">Xposed 模块已更新</string>
     <string name="xposed_module_updated_notification">重启以激活更新。</string>
     <string name="warning_xposed_min_version">该模块需要较新版本的 XposedBridge (%d)，因此无法激活。</string>
     <string name="no_min_version_specified">该模块未指定需要的 XposedBridge 版本。</string>
     <string name="warning_min_version_too_low">该模块在 XposedBridge 版本 %1$d 下创建，但因为不兼容版本 %2$d 中的变化内容，它已被禁用。</string>
-    <string name="module_launch">运行界面</string>
+    <string name="module_launch">启动界面</string>
     <string name="module_download_updates">下载/更新</string>
     <string name="module_support">支持</string>
-    <string name="module_app_info">程序信息</string>
+    <string name="module_app_info">应用信息</string>
     <string name="module_uninstall">卸载</string>
 
     <!-- Download tab -->
@@ -101,11 +104,11 @@
     <string name="download_details_page_versions">版本</string>
     <string name="download_details_page_settings">设置</string>
     <string name="reltype_stable">稳定版</string>
-    <string name="reltype_stable_summary">稳定版（低故障率）</string>
+    <string name="reltype_stable_summary">稳定版(低故障率)</string>
     <string name="reltype_beta">测试版</string>
-    <string name="reltype_beta_summary">测试版（预计存在一些问题）</string>
+    <string name="reltype_beta_summary">测试版(预计存在一些问题)</string>
     <string name="reltype_experimental">实验版</string>
-    <string name="reltype_experimental_summary">实验版（高故障率）</string>
+    <string name="reltype_experimental_summary">实验版(高故障率)</string>
     <string name="reltype_use_global_summary">使用全局设置</string>
     <string name="download_author">作者：%s</string>
     <string name="download_unknown_author">未知作者</string>
@@ -132,8 +135,8 @@
     <string name="settings_group_installation">安装</string>
     <string name="settings_install_mode">安装方式</string>
     <string name="install_mode_normal">经典 (直接写入 /system)</string>
-    <string name="install_mode_recovery_auto">Recovery (自动刷 zip 包)</string>
-    <string name="install_mode_recovery_manual">Recovery (只将 zip 写入 SD 卡以手动刷入)</string>
+    <string name="install_mode_recovery_auto">Recovery (自动刷入 zip 包)</string>
+    <string name="install_mode_recovery_manual">Recovery (将 zip 写入 SD 卡以手动刷入)</string>
     <string name="settings_group_download">下载</string>
     <string name="settings_enable_downloads">启用下载</string>
     <string name="settings_enable_downloads_summary">允许 Xposed 安装器检查更新和新模块</string>
@@ -150,7 +153,13 @@
     <string name="settings_theme_black">黑色 (对 AMOLED 屏幕有帮助)</string>
 
     <!-- Support tab -->
-
+    <string name="support_modules_label">对模块的支持</string>
+    <string name="support_modules_description">在模块列表长按任意模块然后选择“%1$s”。</string>
+    <string name="support_framework_label">框架/安装器支持</string>
+    <string name="support_faq_label">常见问题/已知问题</string>
+    <string name="support_donate_label">捐赠</string>
+    <string name="support_donate_description">如果您想表达对 Xposed 的感谢，您可以在这里捐赠 rovo89：</string>
+    
     <!-- Logs tab  -->
     <string name="logs_load_failed">无法读取日志：</string>
     <string name="logs_save_failed">无法将日志写入 SD 卡：</string>
@@ -166,8 +175,8 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 与 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">请<b>不</b>要直接联系我们获取帮助，使用下面的链接。</string>
     <string name="about_translator_label">翻译：</string>
-    <string name="translator">Cye3s, liveasx, orzFly</string>
-    <string name="about_version_label">应用程序版本：</string>
+    <string name="translator">Cye3s, liveasx, orzFly, liuyun97</string>
+    <string name="about_version_label">应用版本：</string>
     <string name="about_source_label">源码：</string>
     <string name="about_support_label">获取支持：</string>
     <string name="about_libraries_label">使用的库：</string>
@@ -183,10 +192,10 @@
     <string name="download_view_failed">下载失败(错误 %d)</string>
 
     <!-- DownloadUtils -->
-    <string name="download_md5sum_incorrect">MD5 校验码错误 (下载项: %1$s, 预期: %2$s)</string>
-    <string name="download_could_not_read_file">无法读取下载文件：%s</string>
-    <string name="download_no_valid_apk">下载的文件不是有效 APK (或不兼容)</string>
-    <string name="download_incorrect_package_name">包名不正确 (下载项: %1$s, 预期: %2$s)</string>
+    <string name="download_md5sum_incorrect">MD5 校验码错误 (已下载: %1$s, 预期: %2$s)</string>
+    <string name="download_could_not_read_file">无法读取已下载的文件：%s</string>
+    <string name="download_no_valid_apk">已下载的文件不是有效 APK (或不兼容)</string>
+    <string name="download_incorrect_package_name">包名不正确 (已下载: %1$s, 预期: %2$s)</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">下载 %1$s 时出错：%2$d (%3$s)</string>
