--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -3,19 +3,19 @@
 
     <!-- General/various strings -->
     <string name="menuSend">Enviar</string>
-    <string name="menuSaveToSd">Salvar para o cartão SD</string>
-    <string name="xposed_not_active">A versão mais recente do Xposed ainda não foi ativada. Você instalou o framework e reiniciou o dispositivo?</string>
+    <string name="menuSaveToSd">Salvar no cartão SD</string>
+    <string name="xposed_not_active">A versão mais recente do Xposed ainda não está ativa. Você instalou o framework e reiniciou o dispositivo?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">Bem-vindo ao <b>Instalador do Xposed</b>!\nPor favor decida o que iremos fazer:</string>
+    <string name="welcome">Bem-vindo ao <b>Instalador do Xposed</b>!\nPor favor escolha o que deseja fazer:</string>
     <string name="tabInstall">Framework</string>
     <string name="tabInstallDescription">Aqui você gerencia o Xposed framework, o qual é exigido para que qualquer módulo funcione.</string>
     <string name="tabModules">Módulos</string>
-    <string name="tabModulesDescription">O framework sozinho não tem nenhuma funcionalidade. Você precisa de módulos para isso. Nesta guia você pode ativar os módulos que você instalou.</string>
+    <string name="tabModulesDescription">O framework sozinho não tem nenhuma funcionalidade. Você precisa de módulos para isso. Nesta guia você pode ativar os módulos que instalou.</string>
     <string name="tabDownload">Baixar</string>
     <string name="tabDownloadDescription">Esta guia te dá acesso ao repositório de módulos, onde você pode pesquisar e baixar os módulos que você gostar e mantê-los atualizados.</string>
     <string name="welcome_framework_update_available">Uma atualização do Xposed framework está disponível.</string>
-    <string name="welcome_update_available">Uma ou mais atualizações de módulos disponível.</string>
+    <string name="welcome_update_available">Uma ou mais atualizações de módulos disponíveis.</string>
     <string name="tabSettings">Configurações</string>
     <string name="tabSettingsDescription">Nesta guia você configura o Instalador do Xposed e o framework.</string>
     <string name="tabLogs">Registros</string>
@@ -30,7 +30,7 @@
     <string name="latestVersion">disponível</string>
     <string name="versions">Versões:</string>
     <string name="install_header_reboot">Reiniciar</string>
-    <string name="soft_reboot">Reinício suave</string>
+    <string name="soft_reboot">Reinício rápido</string>
     <string name="reboot">Reiniciar</string>
     <string name="areyousure">Tem certeza?</string>
     <string name="phone_not_compatible">O Xposed não é compatível (ainda) com o Android SDK versão %1$d ou a arquitetura do seu processador (%2$s).</string>
@@ -41,7 +41,7 @@
     <string name="reboot_confirmation">Deseja reiniciar agora?</string>
     <string name="reboot_recovery_confirmation">Deseja reiniciar em modo de recuperação agora?</string>
     <string name="install_warning_title">Tenha cuidado!</string>
-    <string name="install_warning">Em alguns casos, oaparelho pode não iniciar mais depois de instalar o Xposed.\n\nSe você nunca ouviu falar em \"soft brick\" e \"bootloop\" antes ou você não sabe se recuperar dessa situação, <b>NÃO</b> instale o Xposed!\n\nEm qualquer caso, ter um back-up recente é altamente recomendado.</string>
+    <string name="install_warning">Em alguns casos, o aparelho pode não iniciar mais depois de instalar o Xposed.\n\nSe você nunca ouviu falar em \"soft brick\" e \"bootloop\" antes ou se você não sabe se recuperar dessa situação, <b>NÃO</b> instale o Xposed!\n\nEm qualquer caso, ter um backup recente é altamente recomendado.</string>
     <string name="dont_show_again">Não mostrar novamente</string>
     <string name="install_known_issue">Parece ser um problema conhecido (\"%s\") com a sua ROM. Instalar o Xposed pode lhe colocar em sérios problemas. Clique aqui para obter detalhes sobre o problema.</string>
     <string name="install_reverted">a versão do app_process \"%1$s\" foi instalada anteriormente mas a \"%2$s\" foi encontrada agora. Se você não esperava a restauração de um arquivo antigo, talvez deva tentar a instalação via recuperação (automática ou manual).</string>
@@ -55,11 +55,11 @@
     <string name="file_mounting_writable">Montando %s como gravável&#8230;</string>
     <string name="file_mount_writable_failed">Não foi possível montar %s como gravável</string>
     <string name="file_trying_to_continue">Tentando continuar assim mesmo&#8230;</string>
-    <string name="file_backup_already_exists">Back-up já existe em %s</string>
-    <string name="file_backup_not_found">Nenhum back-up encontrado em %s</string>
+    <string name="file_backup_already_exists">Backup já existe em %s</string>
+    <string name="file_backup_not_found">Nenhum backup encontrado em %s</string>
     <string name="file_backup_failed">Falha ao criar backup em %s</string>
-    <string name="file_backup_successful">Back-up criado em %s</string>
-    <string name="file_backup_restoring">Restaurando back-up de %s</string>
+    <string name="file_backup_successful">Backup criado em %s</string>
+    <string name="file_backup_restoring">Restaurando backup de %s</string>
     <string name="file_copying">Copiando %s&#8230;</string>
     <string name="file_copy_failed">Não foi possível copiar %1$s para %2$s</string>
     <string name="file_move_failed">Não foi possível  mover %1$s para %2$s</string>
@@ -154,7 +154,7 @@
     <!-- Logs tab  -->
     <string name="logs_load_failed">Não foi possível ler o registro:</string>
     <string name="logs_save_failed">Não foi possível gravar o registro no cartão SD:</string>
-    <string name="sdcard_not_writable">O cartão SD não foi encontrado ou não permitiu a gravaçãSo</string>
+    <string name="sdcard_not_writable">O cartão SD não foi encontrado ou não permitiu a gravação</string>
     <string name="log_too_large">O registro está com mais de %1$,d kB, ignorados os primeiros %2$,d kB</string>
     <string name="menuClearLog">Limpar o registro agora</string>
     <string name="logs_cleared">Limpeza do registro realizada</string>
@@ -165,8 +165,9 @@
     <string name="about_developers_label">Principais desenvolvedores:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Por favor <b>não</b> nos contate diretamente para obter suporte, use o link abaixo.</string>
-    <string name="about_translator_label">Tradutor:</string>
+    <string name="about_translator_label">Tradutores:</string>
     <string name="translator">Marcio Andrade @marciozom13</string>
+    <string name="translator2">KingKaminari @ XDA</string>
     <string name="about_version_label">Versão deste app:</string>
     <string name="about_source_label">Código fonte:</string>
     <string name="about_support_label">Obtenha suporte em:</string>
