--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -4,7 +4,7 @@
     <!-- General/various strings -->
     <string name="menuSend">Gönder</string>
     <string name="menuSaveToSd">SD Karta kaydet</string>
-    <string name="xposed_not_active">Xposed en son sürümü şu anda aktif değildir. Şimdi Frameworku kurmak ve yeniden başlatmak istermisiniz?</string>
+    <string name="xposed_not_active">Xposed en son sürümü şu anda aktif değildir. Şimdi Frameworku kurmak ve yeniden başlatmak ister misiniz?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Xposed Yükleyici <b>Hoşgeldiniz</b>\nLütfen ne yapmak istediğinizi seçin:</string>
@@ -26,35 +26,35 @@
     <!-- Installer tab -->
     <string name="install">Yükle/Güncelle</string>
     <string name="uninstall">Kaldır</string>
-    <string name="installedVersion">aktif</string>
-    <string name="latestVersion">birlikte</string>
+    <string name="installedVersion">yüklenmiş</string>
+    <string name="latestVersion">güncel</string>
     <string name="versions">Versiyonlar:</string>
     <string name="install_header_reboot">Yeniden Başlat</string>
     <string name="soft_reboot">Hızlı yeniden başlat</string>
     <string name="reboot">Yeniden Başlat</string>
-    <string name="areyousure">Eminmisiniz?</string>
-    <string name="phone_not_compatible">Xposed şu an (yet)bu Android SDK versiyonu %1$d ve işlemci mimarisi (%2$s) ile uyumlu değil.</string>
+    <string name="areyousure">Emin misiniz?</string>
+    <string name="phone_not_compatible">Xposed şu an (şimdilik) bu Android SDK versiyonu %1$d ve işlemci mimarisi (%2$s) ile uyumlu değil.</string>
     <string name="not_tested_but_compatible">Xposed Framework bu Android sürümü ile %d, test edilmemiştir ama uyumlu görünüyor. Macerayı seviyorsanız bunu yüklemeyi deneyebilirsiniz..</string>
     <string name="reboot_failed">Y.Başlatma hatası. Lütfen telefonu normal olarak yeniden başlatın.</string>
     <string name="auto_flash_note">%s işlemi otomatik olarak yapmak istiyorsanız "TAMAM" tuşuna basın.</string>
     <string name="manual_flash_note">İşlemi tamamlamak için lütfen %s SD karttan yükleyin.</string>
-    <string name="reboot_confirmation">Telefonu yeniden başlatmak istiyormusunuz?</string>
-    <string name="reboot_recovery_confirmation">Telefonu recovery modda yeniden başlatmak istiyormusunuz?</string>
+    <string name="reboot_confirmation">Telefonu yeniden başlatmak istiyor musunuz?</string>
+    <string name="reboot_recovery_confirmation">Telefonu recovery modda yeniden başlatmak istiyor musunuz?</string>
     <string name="install_warning_title">Dikkatli olun!</string>
     <string name="install_warning">Bazı durumlarda Xposed yüklendikten sonra telefonunuz soft brick olabilir\n\nEğer \"soft brick\" veya \"bootloop\" gibi terimleri duymadıysanız\veya bunlar hakkında bilginiz yoksa Xposedi <b>YÜKLEMEYİN</b> Ya da yüklemeden önce\n\nMutlaka telefonunuzu yedekleyin.</string>
     <string name="dont_show_again">Bunu bir daha gösterme</string>
     <string name="install_known_issue">Kullandığınız rom sürümü ile (\"%s\") Bilinen bir uyumsuzluk sorunu var gibi görünüyor. Muhtemelen Xposed yüklemeniz gerekir. Daha fazla bilgi için buraya tıklayın.</string>
-    <string name="install_reverted">app_process versiyonu \"%1$s\" sisteme yüklenmiş.Ancak \"%2$s\" bulundu. Eğer eski dosyayı kurtarmak veya geri yüklemek istiyorsanız, recovery menüden(otomatik yada or manuel)denemyebilirsiniz.</string>
-    <string name="uninstall_reverted">app_process sistemden kaldırıldı ancak \"%s\" versiyonu bulundu.Eğer eski dosyayı kurtarmak veya geri yüklemek istiyorsanız, recovery menüden(otomatik yada or manuel)denemyebilirsiniz.</string>
+    <string name="install_reverted">app_process versiyonu \"%1$s\" sisteme yüklenmiş.Ancak \"%2$s\" bulundu. Eğer eski dosyayı kurtarmak veya geri yüklemek istiyorsanız, recovery menüden(otomatik yada or manuel)deneyebilirsiniz.</string>
+    <string name="uninstall_reverted">app_process sistemden kaldırıldı ancak \"%s\" versiyonu bulundu.Eğer eski dosyayı kurtarmak veya geri yüklemek istiyorsanız, recovery menüden(otomatik yada or manuel)deneyebilirsiniz.</string>
     <string name="tap_to_dismiss">Kapatmak için dokunun</string>
     <string name="sdcard_location">SD Kart: %s</string>
 
     <!-- File operations -->
     <string name="root_failed">Root erişimi alınamadı.\n\nLütfen cihazınının root erişiminin açık olduğuna ve komut alabildiğine emin olun.</string>
     <string name="file_extract_failed">Dosya %s ayıklanamadı</string>
-    <string name="file_mounting_writable">Montaj %s yazıabilir&#8230;</string>
+    <string name="file_mounting_writable">Montaj %s yazılabilir&#8230;</string>
     <string name="file_mount_writable_failed">Montaj %s yazılabilir değil</string>
-    <string name="file_trying_to_continue">Yine de devam etmek çalışılıyor&#8230;</string>
+    <string name="file_trying_to_continue">Yine de devam etmeye çalışılıyor&#8230;</string>
     <string name="file_backup_already_exists">Bu yedekleme zaten var %s</string>
     <string name="file_backup_not_found">Yedekleme bulunamadı %s</string>
     <string name="file_backup_failed">Yedekleme başarısız oldu %s</string>
@@ -86,11 +86,11 @@
     <string name="xposed_module_updated_notification">Değişiklikleri etkinleştirmek için yeniden başlatın</string>
     <string name="warning_xposed_min_version">Bu modül yeni bir Xposed sürümü (%d) gerektirir ve aktive edilemez..</string>
     <string name="no_min_version_specified">Bu modül ihtiyacı olan XposedBridge sürümünü belirtmez.</string>
-    <string name="warning_min_version_too_low">Bu modül XposedBridge sürüm %1$d, için oluşturuldu, ancak bu sürüm ile uyumsuz değişiklikler var, %2$d, Bu yüzden evre dışı bırakıldı..</string>
-    <string name="module_launch">UI Başlat</string>
-    <string name="module_download_updates">ındir/Güncelle</string>
+    <string name="warning_min_version_too_low">Bu modül XposedBridge sürüm %1$d, için oluşturuldu, ancak bu sürüm ile uyumsuz değişiklikler var, %2$d, Bu yüzden devre dışı bırakıldı..</string>
+    <string name="module_launch">Aç</string>
+    <string name="module_download_updates">İndir/Güncelle</string>
     <string name="module_support">Destek</string>
-    <string name="module_app_info">App Bilgileri</string>
+    <string name="module_app_info">Uyg Bilgileri</string>
     <string name="module_uninstall">Kaldır</string>
 
     <!-- Download tab -->
@@ -130,22 +130,22 @@
 
     <!-- Settings tab -->
     <string name="settings_group_installation">Yükleme</string>
-    <string name="settings_install_mode">Yükleem Modu</string>
+    <string name="settings_install_mode">Yükleme Modu</string>
     <string name="install_mode_normal">Klasik (doğrudan /system klasörüne yazma)</string>
-    <string name="install_mode_recovery_auto">Recovery (Zipdosyasıdna yükleme)</string>
+    <string name="install_mode_recovery_auto">Recovery (Zip dosyası ile yükleme)</string>
     <string name="install_mode_recovery_manual">Recovery (SD karta zip oluşturma, manuel yükleme)</string>
     <string name="settings_group_download">İndir</string>
     <string name="settings_enable_downloads">İndirmeleri etkinleştir</string>
-    <string name="settings_enable_downloads_summary">Xposed Yükleyici güncellemeleri ve yeni modülleri otomatik kontrol etmek için ektinleştirin</string>
+    <string name="settings_enable_downloads_summary">Xposed Yükleyici güncellemeleri ve yeni modülleri otomatik kontrol etmek için etkinleştirin</string>
     <string name="settings_release_type">Gösterilecek sürümler</string>
     <string name="settings_group_experimental">Deneysel</string>
     <string name="settings_disable_resources">Kaynak bilgiler engelli</string>
     <string name="settings_disable_resources_summary">Tema motoru ile çakışmalar için çözüm\n<b>UYARI:</b> Bu etkinleştirildiğinde kaynaklarını değiştirmeye çalışmayın modüller çalışmaz.</string>
     <string name="settings_performance_experiment">Performans deneyleri</string>
-    <string name="settings_performance_experiment_summary">Bunu etkinleştirirseni sistemde performans artışı veya azalma olabilir.. Bunu deneyin ve gördüğünüz herhangi bir etki raporunu bize bildirmekten çekinmeyin. Bunu değiştirdikten sonra framework ve modülleri yeniden yüklemeniz gerekir.</string>
+    <string name="settings_performance_experiment_summary">Bunu etkinleştirirseniz sistemde performans artışı veya azalma olabilir.. Bunu deneyin ve gördüğünüz herhangi bir etki raporunu bize bildirmekten çekinmeyin. Bunu değiştirdikten sonra framework ve modülleri yeniden yüklemeniz gerekir.</string>
     <string name="settings_group_app">Uygulama</string>
     <string name="settings_theme">Tema</string>
-    <string name="settings_theme_light">Hafif</string>
+    <string name="settings_theme_light">Beyaz</string>
     <string name="settings_theme_dark">Karanlık</string>
     <string name="settings_theme_black">Siyah (AMOLED ekranlar için yararlı)</string>
 
@@ -164,7 +164,7 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> and <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Lütfen bizimle <b>direkt</b> olarak iletişim yerine aşağıdaki linki kullanın.</string>
     <string name="about_translator_label">Çevirmen:</string>
-    <string name="translator">TheNorth</string>
+    <string name="translator">TheNorth,droidplus</string>
     <string name="about_version_label">Uygulama sürümü:</string>
     <string name="about_source_label">Kaynak kodu:</string>
     <string name="about_support_label">Destek almak için:</string>
