--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,17 @@
     <string name="tabAbout">About</string>
     <string name="tabAboutDescription">Learn about the people who created Xposed, where to get support for this app etc.</string>
 
+    <!-- navigation view items -->
+    <string name="nav_item_install">Framework</string>
+    <string name="nav_item_modules">Modules</string>
+    <string name="nav_item_download">Download</string>
+    <string name="nav_item_settings">Settings</string>
+    <string name="nav_item_support">Support</string>
+    <string name="nav_item_logs">Logs</string>
+    <string name="nav_item_about">About</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <!-- Installer tab -->
     <string name="install">Install/Update</string>
     <string name="uninstall">Uninstall</string>
