Show module APK size next to Download button fixes rovo89/XposedInstaller#243

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -239,4 +239,6 @@
     <string name="view">VEDI</string>
     <string name="nav_bar_coloration">Colora la barra di navigazione</string>
 
+    <string name="download_view_size">Dimensione: %s KB</string>
+
 </resources>
