new options to share module link

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -240,5 +240,6 @@
     <string name="nav_bar_coloration">Colora la barra di navigazione</string>
 
     <string name="download_view_size">Dimensione: %s KB</string>
+    <string name="share">Condividi con…</string>
 
 </resources>
