--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,5 +240,6 @@
     <string name="no_enabled_modules">There is any modules enabled</string>
 
     <string name="download_view_size">Size: %s KB</string>
+    <string name="share">Share with…</string>
 
 </resources>
