material dialogs, changed colorchooser library

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -241,5 +241,6 @@
 
     <string name="download_view_size">Dimensione: %s KB</string>
     <string name="share">Condividi con…</string>
+    <string name="back">Indietro</string>
 
 </resources>
